--- a/src/components/budget-components/budgetBuilder.css
+++ b/src/components/budget-components/budgetBuilder.css
@@ -3,6 +3,8 @@
     padding: 20px;
     -webkit-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1);
+    overflow: scroll;
+    max-height: 85vh;
 }
 .budgett-button{
     height: 100px;
