budget Calculations functions set

--- a/src/components/budget-components/budgetsFolder.css
+++ b/src/components/budget-components/budgetsFolder.css
@@ -1,8 +1,9 @@
-.rendered-budgets > .card {    
+.rendered-budgets {    
     background: #fff;
     padding: 20px;
     -webkit-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1);
+    width: 100%;
 }
 .budgets-folder {
     background: #fff;
